#포트폴리오 수정

--- a/assets/about.html
+++ b/assets/about.html
@@ -31,28 +31,28 @@
     <main class="about_wrap" style="background: #FAF8F3;">
         <section id="about_section01" class="about_head">
             <div class="grid_01 grid_wrap">
-                <div><img src="./img/about_thum_01.jpg" alt=""></div>
-                <div><img src="./img/about_thum_02.svg" alt="" style="object-fit: none;"></div>
-                <div><img src="./img/about_thum_03.svg" alt=""></div>
-                <div><img src="./img/about_thum_04.svg" alt=""></div>
+                <div class="bg01 bg_about"></div>
+                <div class="bg02 bg_about"></div>
+                <div class="bg03 bg_about"></div>
+                <div class="bg04 bg_about"></div>
             </div>
             <div class="grid_02 grid_wrap">
-                <div><img src="./img/about_thum_05.svg" alt=""></div>
-                <div><img src="./img/about_thum_06.svg" alt=""></div>
-                <div><img src="./img/about_thum_07.svg" alt=""></div>
-                <div><img src="./img/about_thum_08.svg" alt=""></div>
+                <div class="bg05 bg_about"></div>
+                <div class="bg06 bg_about"></div>
+                <div class="bg07 bg_about"></div>
+                <div class="bg08 bg_about"></div>
             </div>
             <div class="grid_03 grid_wrap">
-                <div><img src="./img/about_thum_09.svg" alt=""></div>
-                <div><img src="./img/about_thum_10.svg" alt=""></div>
-                <div><img src="./img/about_thum_11.svg" alt=""></div>
-                <div><img src="./img/about_thum_12.svg" alt=""></div>
+                <div class="bg09 bg_about"></div>
+                <div class="bg10 bg_about"></div>
+                <div class="bg11 bg_about"></div>
+                <div class="bg12 bg_about"></div>
             </div>
             <div class="grid_04 grid_wrap">
-                <div><img src="./img/about_thum_13.svg" alt=""></div>
-                <div><img src="./img/about_thum_14.svg" alt=""></div>
-                <div><img src="./img/about_thum_15.svg" alt=""></div>
-                <div><img src="./img/about_thum_16.svg" alt=""></div>
+                <div class="bg13 bg_about"></div>
+                <div class="bg14 bg_about"></div>
+                <div class="bg15 bg_about"></div>
+                <div class="bg16 bg_about"></div>
             </div>
         </section>
         <section id="about_section02" class="about_contents ele_height">
