--- a/assets/work.html
+++ b/assets/work.html
@@ -30,7 +30,7 @@
     </header>
     <main class="w_wrap">
         <section id="w_section01" class="w_head">
-            <h1>Each project below has won multiple awards. We don't just work for prizes, but they are a testimony that we love our job and do it well.</h1>
+            <h1>Hello and welcome to my web publisher portfolio! I am passionate about web development and have had the privilege of working on a diverse range of personal projects. Each project reflects my dedication to creating user-friendly, visually appealing websites. Below, you will find a showcase of 15 projects that demonstrate my skills and creativity in the world of web publishing.</h1>
         </section>
         <section id="w_section02" class="w_contents">
             <nav>
@@ -39,7 +39,7 @@
             </nav>
             <div class="w_list">
                 <a href="./sub/sub01.html" class="f_left list">
-                    <div class="contents">
+                    <div class="contents red">
                         <img src="./img/10x10.jpg" alt="10x10">
                     </div>
                     <div class="contents_info">
@@ -51,7 +51,7 @@
                     </div>
                 </a>
                 <a href="./sub/sub02.html" class="f_right list">
-                    <div class="contents second">
+                    <div class="contents second red">
                         <img src="./img/10x10.jpg" alt="10x10">
                     </div>
                     <div class="contents_info">
@@ -63,7 +63,7 @@
                     </div>
                 </a>
                 <a href="./sub/sub03.html" class="center list">
-                    <div class="contents third">
+                    <div class="contents third red">
                         <img src="./img/10x10.jpg" alt="10x10">
                     </div>
                     <div class="contents_info">
@@ -75,7 +75,7 @@
                     </div>
                 </a>
                 <a href="./sub/sub04.html" class="f_left list">
-                    <div class="contents">
+                    <div class="contents red">
                         <img src="./img/10x10.jpg" alt="10x10">
                     </div>
                     <div class="contents_info">
@@ -87,7 +87,7 @@
                     </div>
                 </a>
                 <a href="./sub/sub05.html" class="f_right list">
-                    <div class="contents second">
+                    <div class="contents second red">
                         <img src="./img/10x10.jpg" alt="10x10">
                     </div>
                     <div class="contents_info">
@@ -99,7 +99,7 @@
                     </div>
                 </a>
                 <a href="./sub/sub06.html" class="center list">
-                    <div class="contents third">
+                    <div class="contents third red">
                         <img src="./img/10x10.jpg" alt="10x10">
                     </div>
                     <div class="contents_info">
