#포트폴리오 수정

--- a/assets/index.html
+++ b/assets/index.html
@@ -7,13 +7,10 @@
     <title>JinWook Profile</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/main.css">
-    <style>
-        
-    </style>
 </head>
 <body>
     <header id="header_wrap">
@@ -289,30 +286,6 @@
         //     anticipatePin: 1,
         //     markers: false,
         //     animation: txtani2
-        // });
-        // const txtani3 = gsap.timeline();
-        // txtani3.from("#section3 .l_txt", {x: -100, autoAlpha:0, duration:1})
-        // ScrollTrigger.create({
-        //     trigger: "#section3 .l_txt",
-        //     start: "top 80%",
-        //     end: "bottom 50%",
-        //     scrub: true,
-        //     pin: false,
-        //     anticipatePin: 1,
-        //     markers: false,
-        //     animation: txtani3
-        // });
-        // const txtani4 = gsap.timeline();
-        // txtani4.from("#section4 .l_txt", {y: 100, autoAlpha:0, duration:1})
-        // ScrollTrigger.create({
-        //     trigger: "#section4 .l_txt",
-        //     start: "top 80%",
-        //     end: "bottom 50%",
-        //     scrub: true,
-        //     pin: false,
-        //     anticipatePin: 1,
-        //     markers: false,
-        //     animation: txtani4
         // });
         // split-type text 모션 설정
         const targets = gsap.utils.toArray(".text_ani");
