--- a/assets/about.html
+++ b/assets/about.html
@@ -56,10 +56,10 @@
             </div>
         </section>
         <section id="about_section02" class="about_contents ele_height">
-            <h1>Web Developer</h1>
+            <h1 class="l_txt">Web Developer</h1>
             <div class="text">그저 단순히 일하는 것이 아닌 무엇이 더 사용자의 경험에 좋은지 고민하고 더 깊은 전문성을 위해 노력하는 개발자 김진욱입니다.
                 웹 에이전시를 다니며 PC, Mobile 등 다양한 프로젝트에서 웹 표준 및 크로스 브라우징 등을 경험하였고 commerce 회사의 자사 플랫폼 운영을 경험하면서 새로운 기술에 대한 이해뿐만 아니라 어떻게 활용할지 고민하였고 이를 통해 질문을 두려워하지 않으며 팀원들과의 공통적인 발전을 위해 노력했습니다.</div>
-            <h1>SKills</h1>
+            <h1 class="l_txt">SKills</h1>
             <ul class="skill_list">
                 <li>
                     <img src="./img/HTML5_Badge.svg" alt="html5">
@@ -89,9 +89,12 @@
         </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollToPlugin.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.23/bundled/lenis.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollToPlugin3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.23/bundled/lenis.min.js"></script> 
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/DrawSVGPlugin3.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathPlugin.min.js"></script>
+    <script src="https://assets.codepen.io/16327/GSDevTools3.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
     <script src="./js/main.js"></script>
     <script>
@@ -118,7 +121,7 @@
                 duration: 1,
                 ease: "cubic-bezier(0.215, 0.610, 0.355, 1.000)",
                 stagger: {
-                    amount:1.5,
+                    amount:1,
                     from:"lines"
                 },
                 scrollTrigger: {
@@ -127,52 +130,22 @@
                     end: "+=400",
                     markers: false,
                     scrub: false,
+                    toggleActions:"play none none reset"
                 }
             });
         });
-        gsap.registerPlugin(ScrollTrigger);
-        gsap.utils.toArray(".grid_01,.grid_03").forEach((item) => {
-            gsap.fromTo(item, {
-                y: 0,
-                x:-110,
-                autoAlpha:0,
-            },
-            {
-                y: -120,
-                x:0,
-                autoAlpha:1,
-                duration:1,
-                ease: "cubic-bezier(0.215, 0.610, 0.355, 1.000)",
-                scrollTrigger: {
-                    trigger: item,
-                    start: "top 80%",
-                    end: "top 20%",
-                    markers: false,
-                    scrub: false,
-                    toggleActions: "play none none reverse"
-                }
-            });
-        });
-        gsap.utils.toArray(".grid_02,.grid_04").forEach((item) => {
-            gsap.fromTo(item, {
-                y: -120,
-                autoAlpha:0,
-            },
-            {
-                y: 0,
-                autoAlpha:1,
-                duration:1,
-                ease: "cubic-bezier(0.215, 0.610, 0.355, 1.000)",
-                scrollTrigger: {
-                    trigger: item,
-                    start: "top 80%",
-                    end: "top 20%",
-                    markers: false,
-                    scrub: false,
-                    toggleActions: "play none none reverse"
-                }
-            });
-        });
+        const tl = gsap.timeline();
+        tl
+        .from(".grid_01,.grid_03",{
+            y:-500,
+            duration:1,
+            ease:"back",
+        },0)
+        .from(".grid_02,.grid_04",{
+            y:500,
+            duration:1,
+            ease:"back",
+        },0)
     </script>
 </body>
 </html>
