--- a/assets/index.html
+++ b/assets/index.html
@@ -267,7 +267,9 @@
         </section>
         <!-- //section4 -->
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/gsap-trial@3.12.2/DrawSVGPlugin.min.js"></script>
+    <script type="module">
+        import { DrawSVGPlugin } from "https://cdn.jsdelivr.net/npm/gsap-trial@3.12.2/DrawSVGPlugin.min.js";
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollToPlugin3.min.js"></script>
