--- a/assets/index.html
+++ b/assets/index.html
@@ -267,9 +267,9 @@
         </section>
         <!-- //section4 -->
     </main>
-    <script type="module">
+    <!-- <script type="module">
         import { DrawSVGPlugin } from "https://cdn.jsdelivr.net/npm/gsap-trial@3.12.2/DrawSVGPlugin.min.js";
-    </script>
+    </script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollToPlugin3.min.js"></script>
@@ -288,53 +288,53 @@
         }
         requestAnimationFrame(raf)
         // gsap 설정
-        const tween = gsap.to("#section1 .title", {
-            backgroundImage:
-            "linear-gradient(90deg, #111 0%, #111 100%, #fff 100%)",
-            duration: 1,
-            ease: "power1",
-            stagger: {
-                each: 0.1,
-                ease: "power2.out"
-            }
-        });
-        const pulses = gsap
-        .timeline({
-                defaults: {
-                scale: 2,
-                autoAlpha: 0.5,
-                transformOrigin: "center",
-                ease: "elastic(2.5, 1)"
-                }
-        })
-        .to(".ball02, .text01", {}, 0.45)
-        .to(".ball03, .text02", {}, 0.75)
-        .to(".ball04, .text03", {}, 1.12);
+        // const tween = gsap.to("#section1 .title", {
+        //     backgroundImage:
+        //     "linear-gradient(90deg, #111 0%, #111 100%, #fff 100%)",
+        //     duration: 1,
+        //     ease: "power1",
+        //     stagger: {
+        //         each: 0.1,
+        //         ease: "power2.out"
+        //     }
+        // });
+        // const pulses = gsap
+        // .timeline({
+        //         defaults: {
+        //         scale: 2,
+        //         autoAlpha: 0.5,
+        //         transformOrigin: "center",
+        //         ease: "elastic(2.5, 1)"
+        //         }
+        // })
+        // .to(".ball02, .text01", {}, 0.45)
+        // .to(".ball03, .text02", {}, 0.75)
+        // .to(".ball04, .text03", {}, 1.12);
 
-        const main = gsap
-        .timeline({
-            scrollTrigger: {
-            trigger: "#svg",
-            scrub: true,
-            start: "20% 20%",
-            end: "bottom 30%",
-            }
-        })
-        .to(".ball01", { autoAlpha: 1, duration: 0.05 })
-        .from(".theLine", { drawSVG: 0, duration: 4 }, 0)
-        .to(
-            ".ball01",
-            {
-            motionPath: {
-                path: ".theLine",
-                align: ".theLine",
-                alignOrigin: [0.5, 0.5]
-            },
-            duration: 4
-            },
-            0
-        )
-        .add(pulses, 0);
+        // const main = gsap
+        // .timeline({
+        //     scrollTrigger: {
+        //     trigger: "#svg",
+        //     scrub: true,
+        //     start: "20% 20%",
+        //     end: "bottom 30%",
+        //     }
+        // })
+        // .to(".ball01", { autoAlpha: 1, duration: 0.05 })
+        // .from(".theLine", { drawSVG: 0, duration: 4 }, 0)
+        // .to(
+        //     ".ball01",
+        //     {
+        //     motionPath: {
+        //         path: ".theLine",
+        //         align: ".theLine",
+        //         alignOrigin: [0.5, 0.5]
+        //     },
+        //     duration: 4
+        //     },
+        //     0
+        // )
+        // .add(pulses, 0);
         //GSDevTools.create({animation:main})
         // split-type text 모션 설정
         const targets = gsap.utils.toArray(".text_ani");
